{
  "version": 4,
  "terraform_version": "1.3.10",
  "serial": 69,
  "lineage": "0a47e29e-5391-7f4f-4cc4-c87bac306f7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:internet-gateway/igw-0844b84181f63470e",
            "id": "igw-0844b84181f63470e",
            "owner_id": "195201362093",
            "tags": {
              "Name": "kodega-internet-gateway",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "tags_all": {
              "Name": "kodega-internet-gateway",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "vpc_id": "vpc-02c90be7f6b11c28a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:route-table/rtb-0ccced5dfbaacf600",
            "id": "rtb-0ccced5dfbaacf600",
            "owner_id": "195201362093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0844b84181f63470e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kodega-route-table",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "tags_all": {
              "Name": "kodega-route-table",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c90be7f6b11c28a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fef24dc119353842",
            "route_table_id": "rtb-0ccced5dfbaacf600",
            "subnet_id": "subnet-00f0c9d39b3475469"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:security-group/sg-010df6fb77b535070",
            "description": "Allow http inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-010df6fb77b535070",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_http_traffic",
            "name_prefix": "",
            "owner_id": "195201362093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_http_traffic",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "tags_all": {
              "Name": "public_http_traffic",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c90be7f6b11c28a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:subnet/subnet-00f0c9d39b3475469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f0c9d39b3475469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195201362093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kodega-public-subnet",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "tags_all": {
              "Name": "kodega-public-subnet",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "vpc_id": "vpc-02c90be7f6b11c28a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:vpc/vpc-02c90be7f6b11c28a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d166043379f903dc",
            "default_route_table_id": "rtb-06494599b19b88796",
            "default_security_group_id": "sg-0e2d14d0878c80d89",
            "dhcp_options_id": "dopt-096d18c6fa4323614",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c90be7f6b11c28a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06494599b19b88796",
            "owner_id": "195201362093",
            "tags": {
              "Name": "kodega-vpc",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            },
            "tags_all": {
              "Name": "kodega-vpc",
              "is_created_by_terraform": "true",
              "project": "vpc and ec2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:security-group-rule/sgr-0133c5eba4a6d42a0",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0133c5eba4a6d42a0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-010df6fb77b535070",
            "security_group_rule_id": "sgr-0133c5eba4a6d42a0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:security-group-rule/sgr-029c8555f833710c5",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-029c8555f833710c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-010df6fb77b535070",
            "security_group_rule_id": "sgr-029c8555f833710c5",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195201362093:security-group-rule/sgr-0d305d11779fc0235",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d305d11779fc0235",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-010df6fb77b535070",
            "security_group_rule_id": "sgr-0d305d11779fc0235",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}